# gravar-reuniao-pkg

./: .gitignore  README.md  pyproject.toml
gravar_reuniao/: __init__.py  __main__.py  cli.py
gravar_reuniao/modules/: __init__.py  audio_devices.py  recording.py
