[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gravar-reuniao"
version = "0.1.0"
description = "Sistema portável para gravação de áudio de desktop e microfone"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Richard"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
gravar-reuniao = "gravar_reuniao.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gravar_reuniao*"]
